# trans

./: .gitignore  CMakeLists.txt  requirements.txt  resource.qrc  trans.ps1  trans.sh
include/: main_window.h
src/: main.cc  main_window.cc
src-python/: app.py  config.py  translater.py
ui/: main_window.ui
